Changed Mod listing layout

--- a/public/js/tpl/mods/list.html
+++ b/public/js/tpl/mods/list.html
@@ -16,9 +16,10 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th width="100%">Mod</th>
-      <th>Size</th>
-      <th></th>
+		<th width="50%">Mod</th>
+		<th width="50%">Workshop</th>
+		<th>Size</th>
+		<th></th>
     </tr>
   </thead>
 
