--- a/public/js/tpl/mods/list_item.html
+++ b/public/js/tpl/mods/list_item.html
@@ -1,5 +1,7 @@
 <td>
-  <%-name%>
+	<%-name%>
+</td>
+<td style="white-space: nowrap;">
   <% if (link) { %>
     <a href='<%-link%>' target=_blank rel='noopener noreferrer'>
       <%-title%>
